data/forge_javadoc/1.7.10/raw/net/minecraft/client/gui/inventory/GuiInventory.md
---
title: "GuiInventory"
description: "public class GuiInventory extends InventoryEffectRenderer"
package: "net/minecraft/client/gui/inventory"
version: "1.7.10"
forgeBuild: "10.13.4.1614"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.7.10-10.13.4.1614/net/minecraft/client/gui/inventory/GuiInventory.html"
sourceType: javadoc
---

# GuiInventory

**Inheritance:** java.lang.Object → net.minecraft.client.gui.Gui → net.minecraft.client.gui.GuiScreen → net.minecraft.client.gui.inventory.GuiContainer → net.minecraft.client.renderer.InventoryEffectRenderer → net.minecraft.client.gui.inventory.GuiInventory

## Class signature

```java
public class GuiInventory extends InventoryEffectRenderer
```

## Methods

- `protected void actionPerformed(GuiButton p_146284_1_)`
- `protected void drawGuiContainerBackgroundLayer(float p_146976_1_, int p_146976_2_, int p_146976_3_)`
- `protected void drawGuiContainerForegroundLayer(int p_146979_1_, int p_146979_2_)`
- `void drawScreen(int p_73863_1_, int p_73863_2_, float p_73863_3_)`
- `static void func_147046_a(int p_147046_0_, int p_147046_1_, int p_147046_2_, float p_147046_3_, float p_147046_4_, EntityLivingBase p_147046_5_)`
- `void initGui()`
- `void updateScreen()`

## Fields

- `GuiInventory`
